Fix Misalignment of Project Name
Apparently we missed out that short project names and project paths could result in janky list cells.

--- a/src/main/resources/site/overwrite/auditranscribe/views/css/base.css
+++ b/src/main/resources/site/overwrite/auditranscribe/views/css/base.css
@@ -35,16 +35,19 @@
 }
 
 .project-name-label {
+    -fx-pref-width: 375px;
     -fx-max-width: 375px;
     -fx-text-alignment: left;
 }
 
 .last-opened-date-label {
+    -fx-pref-width: 225px;
     -fx-max-width: 225px;
     -fx-text-alignment: right;
 }
 
 .filepath-label {
+    -fx-pref-width: 600px;
     -fx-max-width: 600px;
 }
 
